tests/neg/mirror-synthesis-errors.check
-- Error: tests/neg/mirror-synthesis-errors.scala:21:32 ----------------------------------------------------------------
21 |val testA = summon[Mirror.Of[A]] // error: Not a sealed trait
   |                                ^
   |No given instance of type deriving.Mirror.Of[A] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[A]: trait A is not a sealed trait
-- Error: tests/neg/mirror-synthesis-errors.scala:22:32 ----------------------------------------------------------------
22 |val testC = summon[Mirror.Of[C]] // error: Does not have subclasses
   |                                ^
   |No given instance of type deriving.Mirror.Of[C] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[C]: trait C does not have subclasses
-- Error: tests/neg/mirror-synthesis-errors.scala:23:32 ----------------------------------------------------------------
23 |val testD = summon[Mirror.Of[D]] // error: child SubD takes more than one parameter list
   |                                ^
   |No given instance of type deriving.Mirror.Of[D] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[D]: class D's child class SubD is not a generic product because class SubD takes more than one parameter list
-- Error: tests/neg/mirror-synthesis-errors.scala:24:38 ----------------------------------------------------------------
24 |val testSubD = summon[Mirror.Of[SubD]] // error: takes more than one parameter list
   |                                      ^
   |No given instance of type deriving.Mirror.Of[SubD] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[SubD]: class SubD is not a sealed class
-- Error: tests/neg/mirror-synthesis-errors.scala:25:32 ----------------------------------------------------------------
25 |val testE = summon[Mirror.Of[E]] // error: Not an abstract class
   |                                ^
   |No given instance of type deriving.Mirror.Of[E] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[E]: class E is not an abstract class
-- Error: tests/neg/mirror-synthesis-errors.scala:26:32 ----------------------------------------------------------------
26 |val testF = summon[Mirror.Of[F]] // error: No children
   |                                ^
   |No given instance of type deriving.Mirror.Of[F] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[F]: trait F does not have subclasses
-- Error: tests/neg/mirror-synthesis-errors.scala:27:36 ----------------------------------------------------------------
27 |val testG = summon[Mirror.Of[Foo.G]] // error: Has anonymous subclasses
   |                                    ^
   |No given instance of type deriving.Mirror.Of[Foo.G] was found for parameter x of method summon in object Predef. Failed to synthesize implicit of type deriving.Mirror.Of[Foo.G]: trait G has anonymous or inaccessible subclasses
